# Amux

./: ARCHITECTURE.md  Build.txt  CMakeLists.txt  README.md
cmake/: grub.cfg  toolchain-x86_64-elf.cmake
kernel/: CMakeLists.txt  linker.ld
kernel/arch/x86_64/boot/: entry.S  multiboot.S
kernel/init/: kmain.cpp
